--- a/mydetail.html
+++ b/mydetail.html
@@ -80,7 +80,8 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                               url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
+                              url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                              // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                                //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
                 data: JSON.stringify(Paramdata),
@@ -102,7 +103,8 @@
         function GetMyDetails() {
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchoolUserBySchoolUserId',
+                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchoolUserBySchoolUserId',
+                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchoolUserBySchoolUserId',
                 //url: 'WebService.asmx/GetSchoolUserBySchoolUserId',
                 type: 'POST',
                 data: "{'SchoolUserId': '" + schooluserid + "'}",
@@ -131,7 +133,8 @@
         function UpdateMyDetails() {
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
+                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
+                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
                 //url: 'WebService.asmx/UpdateSchoolUserBySchoolUserId',
                 type: 'POST',
                 data: "{'SchoolUserId': '" + schooluserid + "','FirstName': '" + $("#txtFirstName").val() + "','LastName': '" + $("#txtLastName").val() + "','Email': '" + $("#txtEmailAddress").val() + "','Phone': '" + $("#txtPhone").val() + "','Address': '" + $("#txtAddress").val() + "'}",
