--- a/newsdetail.html
+++ b/newsdetail.html
@@ -77,7 +77,8 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                 url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
+                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                  //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
                 data: JSON.stringify(Paramdata),
@@ -102,7 +103,8 @@
             //alert(schooluserid);
             $.ajax({
                 //url: 'WebService.asmx/GetNews_NewsIdWise',
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsIdWise',
+                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetNews_NewsIdWise',
+                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsIdWise',
                 type: 'POST',
                 data: "{'intNewsId': '" + newsid + "'}",
                 contentType: "application/json; charset=utf-8",
@@ -129,7 +131,8 @@
             var schooluserid = getUrlVars()["userId"];
             //alert(schooluserid);
             $.ajax({
-                url: 'WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+               // url: 'WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
                 type: 'POST',
                 data: "{'intChannelId': '" + channelId + "','SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
@@ -155,7 +158,8 @@
             var schoolid = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+              //  url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                 type: 'POST',
                 data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
