--- a/share.html
+++ b/share.html
@@ -4,8 +4,10 @@
     <title>Share</title>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
+     <script src="JS/json2.js" type="text/javascript"></script>
+    <script src="js/date.format.js" type="text/javascript"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
         $(function () {
@@ -82,7 +84,8 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
+               url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+               // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
                 data: JSON.stringify(Paramdata),
