--- a/contacts.html
+++ b/contacts.html
@@ -78,7 +78,7 @@
         function GetSchoolInfo() {
             $.ajax({
                
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'http://projectX.2bvision.com/projectx/WebCommunicator/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
@@ -101,7 +101,7 @@
         function GetContacts() {
             $.ajax({
                 //url: 'WebService.asmx/GetContact_SchoolIdWise',
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetContact_SchoolIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetContact_SchoolIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetContact_SchoolIdWise',
                 type: 'POST',
                 data: "{'SchoolId': '" + querystring + "'}",
@@ -127,7 +127,7 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-               url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+               url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
