--- a/ataglance.html
+++ b/ataglance.html
@@ -137,7 +137,7 @@
             //alert(schooluserid);
             $.ajax({
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
                 //url: 'WebService.asmx/GetNews_NewsSchoolUserIdWise',
                 type: 'POST',
                 data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
@@ -169,7 +169,7 @@
             }
             var username = getUrlVars()["username"];
             $.ajax({
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                 //url: 'WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                 type: 'POST',
@@ -203,7 +203,7 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-               url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+               url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
