--- a/calendar.html
+++ b/calendar.html
@@ -77,7 +77,7 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                 // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                 // url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
@@ -100,7 +100,7 @@
             var schoolid = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                 //url: 'WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
                 type: 'POST',
@@ -136,7 +136,7 @@
             var schoolid = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetCalendar_SchoolChannelSchoolUserIdWise',
+                 url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetCalendar_SchoolChannelSchoolUserIdWise',
                 //url: 'WebService.asmx/GetCalendar_SchoolChannelSchoolUserIdWise',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetCalendar_SchoolChannelSchoolUserIdWise',
                 type: 'POST',
@@ -172,7 +172,7 @@
             var schoolid = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                 //url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                 type: 'POST',
