--- a/changeschool.html
+++ b/changeschool.html
@@ -36,7 +36,7 @@
            // alert("button clicked.");
             $.ajax({
                 type: "POST",
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetSchoolUserByEmailAndPassword',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetSchoolUserByEmailAndPassword',
                // url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetSchoolUserByEmailAndPassword",
                 //url: "Webservice.asmx/MobileAppGetSchoolUserByEmailAndPassword",
                 data: "{'email': '" + window.localStorage["username"] + "','password':'" + window.localStorage["password"] + "'}",
@@ -51,7 +51,7 @@
                             var username = prod.FirstName + " " + prod.LastName;
                             $.ajax({
                                 type: "POST",
-                                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchools_SchoolCodeWise',
+                                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchools_SchoolCodeWise',
                                // url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
                                 //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                                 data: "{'strSchoolCode': '" + prod.SchoolCode + "'}",
@@ -112,7 +112,7 @@
             //alert("admin enter");
             $.ajax({
                 type: "POST",
-               url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetSchoolByEmailPassword',
+               url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetSchoolByEmailPassword',
                // url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetSchoolByEmailPassword",
                 //url: "Webservice.asmx/MobileAppGetSchoolByEmailPassword",
                 data: "{'email': '" + window.localStorage["username"] + "','password':'" + window.localStorage["password"] + "'}",
@@ -133,7 +133,7 @@
                             var username = "Admin";
                             $.ajax({
                                 type: "POST",
-                                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchools_SchoolCodeWise',
+                                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchools_SchoolCodeWise',
                                 //url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
                                 //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                                 data: "{'strSchoolCode': '" + prod.SchoolCode + "'}",
@@ -195,7 +195,7 @@
         function LoginBackOfficeUser() {
             $.ajax({
                 type: "POST",
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword',
                // url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword",
                 //url: "Webservice.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword",
                 data: "{'email': '" + window.localStorage["username"] + "','password':'" + window.localStorage["password"] + "'}",
@@ -211,7 +211,7 @@
                             //alert("School Code::::" + prod.SchoolId);
                             $.ajax({
                                 type: "POST",
-                                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                                 //url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchool_SchoolIdWise",
                                 //url: "Webservice.asmx/GetSchool_SchoolIdWise",
                                 data: "{'SchoolId': '" + prod.SchoolId + "'}",
