--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             //alert("button clicked.");
             $.ajax({
                 type: "POST",
-                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetSchoolUserByEmailAndPassword',
+                 url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetSchoolUserByEmailAndPassword',
                 //url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetSchoolUserByEmailAndPassword",
                 //url: "Webservice.asmx/MobileAppGetSchoolUserByEmailAndPassword",
                 data: "{'email': '" + $('#txtEmail').val() + "','password':'" + $('#txtPassword').val() + "'}",
@@ -141,7 +141,7 @@
                             var username = prod.FirstName + " " + prod.LastName;
                             $.ajax({
                                 type: "POST",
-                                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchools_SchoolCodeWise',
+                                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchools_SchoolCodeWise',
                                // url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
                                 //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                                 data: "{'strSchoolCode': '" + prod.SchoolCode + "'}",
@@ -201,7 +201,7 @@
         function LoginBusinessAdmin() {
             $.ajax({
                 type: "POST",
-                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetSchoolByEmailPassword',
+                 url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetSchoolByEmailPassword',
                 //url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetSchoolByEmailPassword",
                 //url: "Webservice.asmx/MobileAppGetSchoolByEmailPassword",
                 data: "{'email': '" + $('#txtEmail').val() + "','password':'" + $('#txtPassword').val() + "'}",
@@ -223,7 +223,7 @@
                             var username = "Admin";
                             $.ajax({
                                 type: "POST",
-                                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchools_SchoolCodeWise',
+                                 url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchools_SchoolCodeWise',
                                 //url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
                                 //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                                 data: "{'strSchoolCode': '" + prod.SchoolCode + "'}",
@@ -283,7 +283,7 @@
         function LoginBackOfficeUser() {
             $.ajax({
                 type: "POST",
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword',
                 //url: "http://projectxmobile.2bvision.com/webservice.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword",
                 //url: "Webservice.asmx/MobileAppGetBackOfficeUser_ByEmailandPassword",
                 data: "{'email': '" + $('#txtEmail').val() + "','password':'" + $('#txtPassword').val() + "'}",
@@ -301,7 +301,7 @@
                             //alert("School Code::::" + prod.SchoolId);
                             $.ajax({
                                 type: "POST",
-                               url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                               url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                                // url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchool_SchoolIdWise",
                                 //url: "Webservice.asmx/GetSchool_SchoolIdWise",
                                 data: "{'SchoolId': '" + prod.SchoolId + "'}",
@@ -360,7 +360,7 @@
         function GetSchoolNameBySchoolCode(code) {
             $.ajax({
                 type: "POST",
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchoolUserByEmailAndPassword',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchoolUserByEmailAndPassword',
                 //url: "http://projectx.2bvision.com/WebCommunicator/Webservice.asmx/GetSchoolUserByEmailAndPassword",
                 //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                 data: "{'strSchoolCode': '" + code + "'}",
