--- a/mydetail.html
+++ b/mydetail.html
@@ -80,7 +80,7 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                              url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchool_SchoolIdWise',
+                              url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchool_SchoolIdWise',
                               // url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
                                //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
@@ -103,7 +103,7 @@
         function GetMyDetails() {
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/GetSchoolUserBySchoolUserId',
+                url: 'http://mobile.intouchcommunicator.com/WebService.asmx/GetSchoolUserBySchoolUserId',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchoolUserBySchoolUserId',
                 //url: 'WebService.asmx/GetSchoolUserBySchoolUserId',
                 type: 'POST',
@@ -133,7 +133,7 @@
         function UpdateMyDetails() {
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                 url: 'http://mobile.intouchcommunicator.com.baventur.arvixevps.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
+                 url: 'http://mobile.intouchcommunicator.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/UpdateSchoolUserBySchoolUserId',
                 //url: 'WebService.asmx/UpdateSchoolUserBySchoolUserId',
                 type: 'POST',
