--- a/resources.html
+++ b/resources.html
@@ -125,7 +125,7 @@
                 //  alert(path);
                 //downloadFile(path);
                     var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath="+ path;
-                    var ref = window.open(prods, '_blank', 'location=yes');
+                    var ref = window.open(prods, '_blank', 'location=yes','toolbar=yes');
                 });
             
         });
