--- a/gallery.html
+++ b/gallery.html
@@ -112,7 +112,7 @@
                     Kewords = response.d;
                     for (i = 0; i < Kewords.length; i++) {
                         //document.getElementById("ulImggallery").innerHTML += "<li><a href='http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='"+ Kewords[i].GalleryFileName +"'><img src=http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
-                        document.getElementById("ulImggallery").innerHTML += "<li><a href='http://projectx.2bvision.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='" + Kewords[i].GalleryFileName + "'><img src=http://projectx.2bvision.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
+                        document.getElementById("ulImggallery").innerHTML += "<li><a href='http://intouchcommunicator.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='" + Kewords[i].GalleryFileName + "'><img src=http://intouchcommunicator.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
                     }
 
                 },
