--- a/share.html
+++ b/share.html
@@ -183,7 +183,7 @@
                 </a></li>
             </ul>
         </div>
-        <div class="detail-area">
+        <div class="detail-area" style="margin-top:35px">
             <center>
                 <h3 style="margin: 10px auto 0 auto;color:#cc0000;">
                     Share With Friends</h3>
