--- a/share.html
+++ b/share.html
@@ -104,7 +104,7 @@
         }
 
         $(document).ready(function () {
-            alert("ready");
+            //alert("ready");
             assignLinks();
             GetUsername();
             GetSchoolInfo();
