--- a/share.html
+++ b/share.html
@@ -3,10 +3,10 @@
 <head>
     <title>Share</title>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
-    <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
-    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-     <script src="JS/json2.js" type="text/javascript"></script>
+     <script src="js/json2.js" type="text/javascript"></script>
     <script src="js/date.format.js" type="text/javascript"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
@@ -30,7 +30,7 @@
 
             // set effect from select menu value
             $("#button").click(function () {
-               alert("button");
+               //alert("button");
                 runEffect();
                 return false;
             });
