--- a/resources.html
+++ b/resources.html
@@ -3,8 +3,8 @@
 <head>
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-     <script type="text/javascript" charset="utf-8" src="cordova-2.7.0.js"></script>
-    <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
+    <!--<script src="js/phonegap-1.4.1.js" type="text/javascript"></script>-->
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script src="JS/json2.js" type="text/javascript"></script>
     <script src="JS/date.format.js" type="text/javascript"></script>
@@ -119,7 +119,7 @@
                     GetResourcesChannelIdWise(channelId);
                 }
             });
-            $('.viewresource').live("click", function () {
+            $('.viewresource').click( function () {
                 //  alert('click');
                     var path = $(this).attr("id");
                 //  alert(path);
