--- a/resources.html
+++ b/resources.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
+    <script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
-    <!--<script src="js/phonegap-1.4.1.js" type="text/javascript"></script>-->
+    <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script src="JS/json2.js" type="text/javascript"></script>
-    <script src="JS/date.format.js" type="text/javascript"></script>
+    <script src="jS/json2.js" type="text/javascript"></script>
+    <script src="jS/date.format.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     
     <title>Resources</title>
@@ -119,7 +119,7 @@
                     GetResourcesChannelIdWise(channelId);
                 }
             });
-            $('.viewresource').click( function () {
+            $('.viewresource').live("click", function () {
                 //  alert('click');
                     var path = $(this).attr("id");
                 //  alert(path);
