--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
-    <script type="text/javascript" src="cordova-2.7.0.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
