--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
     <script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-    <script type="text/javascript" charset="utf-8" src="cordova.ios.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <!--<script src="js/phonegap-1.4.1.js" type="text/javascript"></script>-->
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script src="jS/json2.js" type="text/javascript"></script>
@@ -44,7 +44,7 @@
      .resoursesclick
      {
      color:#737373;
-   // color:White;
+    /*color:White;*/
      text-decoration:none;
      }
      </style>
@@ -125,7 +125,8 @@
                 //  alert(path);
                 //downloadFile(path);
                     var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath="+ path;
-                    var ref = window.open(prods, '_blank', 'location=yes','toolbar=yes');
+                //var ref = window.open(prods, '_blank', 'location=yes','toolbar=yes');
+                    var ref = window.open(prods, '_blank', 'location=yes');
                 });
             
         });
