--- a/resources.html
+++ b/resources.html
@@ -124,10 +124,9 @@
                     var path = $(this).attr("id");
                 //  alert(path);
                 //downloadFile(path);
-                //var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath="+ path;
-                    var prods = "https://soundcloud.com/stream";
+                var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath="+ path;     
                 //var ref = window.open(prods, '_blank', 'location=yes','toolbar=yes');
-                    var ref = window.open(prods, '_blank', 'location=yes');
+                var ref = window.open(prods, '_blank', 'location=yes');
                 });
             
         });
