--- a/resources.html
+++ b/resources.html
@@ -124,7 +124,8 @@
                     var path = $(this).attr("id");
                 //  alert(path);
                 //downloadFile(path);
-                var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath="+ path;     
+                    var prods = "http://intouchcommunicator.com/WebCommunicator/ViewResourceFile.aspx?filepath=" + path;
+                    alert(prods);
                 //var ref = window.open(prods, '_blank', 'location=yes','toolbar=yes');
                 var ref = window.open(prods, '_blank', 'location=yes');
                 });
